force-app/main/default/objects/ADM_Column__c/ADM_Column__c.object-meta.xml
<CustomObject>
    <description>Used to store meta data for a team&#39;s kanban board</description>
    <label>Column</label>
    <nameField>
        <label>Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>