force-app/main/default/objects/ADM_Column__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active field value true/false can be used to delete or undelete a column. Active__c = false will soft delete the column and will not show up in the Kanban board for the team</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>