force-app/main/default/objects/ADM_Column__c/fields/Max_Number_of_Records__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_of_Records__c</fullName>
    <label>Max # of Records</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>