force-app/main/default/objects/ADM_Column__c/fields/Parent_Column__c.field-meta.xml
<CustomField>
    <fullName>Parent_Column__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Column</label>
    <referenceTo>ADM_Column__c</referenceTo>
    <relationshipLabel>Columns</relationshipLabel>
    <relationshipName>Columns</relationshipName>
    <type>Lookup</type>
</CustomField>