force-app/main/default/objects/ADM_Column__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Columns</relationshipLabel>
    <relationshipName>Columns</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>